[gd_scene load_steps=21 format=3 uid="uid://cpn2ympvqfo3q"]

[ext_resource type="Script" path="res://ui/pick_object_ui.gd" id="1_1l0jk"]
[ext_resource type="Texture2D" uid="uid://nalopa1mbntn" path="res://tiles/ground_tile/light_ground.png" id="1_t1rhl"]
[ext_resource type="Texture2D" uid="uid://b0ivlhdjqiokb" path="res://ui/stairs_icon.png" id="3_s8hha"]
[ext_resource type="Script" path="res://ui/object.gd" id="4_j0pxk"]
[ext_resource type="Script" path="res://tiles/base_tile/tile_resource.gd" id="5_m0jn7"]
[ext_resource type="PackedScene" uid="uid://cm8gyi4lp50xt" path="res://tiles/stairs/stairs.tscn" id="6_h6as3"]
[ext_resource type="Texture2D" uid="uid://b1t3fgybnilcg" path="res://ui/wall_icon.png" id="7_qtsts"]
[ext_resource type="PackedScene" uid="uid://c7cne23micuh4" path="res://tiles/wall_tile/wall.tscn" id="8_l7qon"]
[ext_resource type="Texture2D" uid="uid://cim07ym1u4c6i" path="res://ui/platform_icon.png" id="8_oxbrx"]
[ext_resource type="Texture2D" uid="uid://dvcv840xr6gny" path="res://ui/cursor.png" id="9_almei"]
[ext_resource type="Script" path="res://ui/cursor.gd" id="9_bjhg1"]
[ext_resource type="PackedScene" uid="uid://bl2cbrwnavqyl" path="res://tiles/platform_tile/platform.tscn" id="10_nuims"]
[ext_resource type="Resource" uid="uid://dutd1sptby8aw" path="res://player/p1_controls.tres" id="11_evdjb"]
[ext_resource type="Resource" uid="uid://c1bs0xj1k2bgb" path="res://player/p2_controls.tres" id="12_dylk1"]
[ext_resource type="Texture2D" uid="uid://bevm03vfh0jk8" path="res://ui/3.png" id="15_ha2xv"]
[ext_resource type="Texture2D" uid="uid://b4mrqmhr2b5o4" path="res://ui/3red.png" id="16_g7vf5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sp7fk"]
texture = ExtResource("1_t1rhl")

[sub_resource type="Resource" id="Resource_uhw60"]
script = ExtResource("5_m0jn7")
tile = ExtResource("6_h6as3")
sprite = ExtResource("3_s8hha")

[sub_resource type="Resource" id="Resource_qxiql"]
script = ExtResource("5_m0jn7")
tile = ExtResource("8_l7qon")
sprite = ExtResource("7_qtsts")

[sub_resource type="Resource" id="Resource_rc23q"]
script = ExtResource("5_m0jn7")
tile = ExtResource("10_nuims")
sprite = ExtResource("8_oxbrx")

[node name="PickObjectUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1l0jk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.505882)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -322.0
offset_right = 322.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sp7fk")

[node name="ObjectHolder" type="Control" parent="Panel"]
layout_mode = 1
anchor_left = 0.035
anchor_top = 0.024
anchor_right = 0.965
anchor_bottom = 0.986
grow_horizontal = 2
grow_vertical = 2

[node name="Stairs" type="TextureRect" parent="Panel/ObjectHolder"]
visible = false
layout_mode = 1
anchors_preset = -1
offset_right = 100.0
offset_bottom = 100.0
pivot_offset = Vector2(50, 50)
texture = ExtResource("3_s8hha")
expand_mode = 1
script = ExtResource("4_j0pxk")
tile = SubResource("Resource_uhw60")

[node name="Wall" type="TextureRect" parent="Panel/ObjectHolder"]
visible = false
layout_mode = 1
anchors_preset = -1
offset_right = 100.0
offset_bottom = 100.0
pivot_offset = Vector2(50, 50)
texture = ExtResource("7_qtsts")
expand_mode = 1
script = ExtResource("4_j0pxk")
tile = SubResource("Resource_qxiql")

[node name="Platform" type="TextureRect" parent="Panel/ObjectHolder"]
visible = false
layout_mode = 1
anchors_preset = -1
offset_right = 100.0
offset_bottom = 100.0
pivot_offset = Vector2(50, 50)
texture = ExtResource("8_oxbrx")
expand_mode = 1
script = ExtResource("4_j0pxk")
tile = SubResource("Resource_rc23q")

[node name="CursorP1" type="TextureRect" parent="Panel/ObjectHolder"]
modulate = Color(0, 0.341667, 0.82, 1)
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 80.0
offset_bottom = 100.0
rotation = -0.785398
pivot_offset = Vector2(10, 50)
texture = ExtResource("9_almei")
expand_mode = 1
script = ExtResource("9_bjhg1")
controls = ExtResource("11_evdjb")

[node name="CursorP2" type="TextureRect" parent="Panel/ObjectHolder"]
modulate = Color(0.81, 0, 0, 1)
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.261
anchor_top = 0.5
anchor_right = 0.261
anchor_bottom = 0.5
offset_right = 80.0
offset_bottom = 100.0
rotation = -0.785398
pivot_offset = Vector2(10, 50)
texture = ExtResource("9_almei")
expand_mode = 1
script = ExtResource("9_bjhg1")
controls = ExtResource("12_dylk1")

[node name="SpriteBlue" type="Sprite2D" parent="."]
modulate = Color(0.53, 0.53, 0.53, 1)
position = Vector2(433.05, 606.72)
scale = Vector2(0.03, 0.03)
texture = ExtResource("15_ha2xv")

[node name="SpriteRed" type="Sprite2D" parent="."]
modulate = Color(0.53, 0.53, 0.53, 1)
position = Vector2(833.05, 606.72)
scale = Vector2(0.03, 0.03)
texture = ExtResource("16_g7vf5")

[connection signal="gui_input" from="Panel/ObjectHolder/Stairs" to="Panel/ObjectHolder/Stairs" method="_on_gui_input"]
[connection signal="gui_input" from="Panel/ObjectHolder/Wall" to="Panel/ObjectHolder/Wall" method="_on_gui_input"]
[connection signal="gui_input" from="Panel/ObjectHolder/Platform" to="Panel/ObjectHolder/Platform" method="_on_gui_input"]
